tests/diagnostics/expressions/match/non_exhaustive/expect.txt
# exit: 1
lib.coppice:5:12: error: non-exhaustive match, missing: string
      return match value {
             ^
